# ms-accelerators-bot

./: .gitignore  README.md  function_app.py  pyproject.toml
.devcontainer/: devcontainer-lock.json  devcontainer.json  post_create.sh
.github/prompts/: create-plan.prompt.md  implement-plan.prompt.md
.github/workflows/: ci.yml  deploy-infra.yml
.squad/: .first-run  decisions.md  routing.md  team.md
.squad/agents/chandler/: charter.md  history.md
.squad/agents/gunther/: charter.md  history.md
.squad/agents/joey/: charter.md  history.md
.squad/agents/monica/: charter.md  history.md
.squad/agents/phoebe/: charter.md  history.md
.squad/agents/rachel/: charter.md  history.md
.squad/agents/ralph/: charter.md  history.md
.squad/agents/ross/: charter.md  history.md
.squad/agents/scribe/: charter.md  health-report-2026-05-29.md  history.md
.squad/casting/: history.json  policy.json  registry.json
.squad/decisions/: decisions.md
.squad/decisions/inbox/: joey-repo-scaffold.md
.squad/identity/: now.md  wisdom.md
docs/: custom-domain-setup.md  proposal.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/api/: client.ts  index.ts
frontend/src/auth/: AuthProvider.tsx  index.ts  msalConfig.ts
frontend/src/components/: Footer.tsx  Header.tsx  ProtectedRoute.tsx  index.ts
frontend/src/pages/: ChatPage.tsx  HistoryPage.tsx  LandingPage.tsx  PrivacyPage.tsx  ProfilePage.tsx  TermsPage.tsx  index.ts
infra/: .terraform.lock.hcl  README.md  backend.hcl.example  main.tf  outputs.tf  variables.tf
infra/modules/container_app/: main.tf  outputs.tf  variables.tf
infra/modules/cosmos/: main.tf  outputs.tf  variables.tf
infra/modules/external_id/: README.md  main.tf  outputs.tf  variables.tf
infra/modules/front_door/: main.tf  outputs.tf  variables.tf
infra/modules/functions/: main.tf  outputs.tf  variables.tf
infra/modules/keyvault/: main.tf  outputs.tf  variables.tf
infra/modules/monitoring/: main.tf  outputs.tf  variables.tf
infra/modules/openai/: main.tf  outputs.tf  variables.tf
infra/modules/resource_group/: outputs.tf
infra/modules/search/: main.tf  outputs.tf  variables.tf
infra/modules/storage/: main.tf  outputs.tf  variables.tf
infra/modules/swa/: main.tf  outputs.tf  variables.tf
src/: __init__.py  main.py
src/api/: auth.py  config.py  dependencies.py  main.py  quota_dependency.py  quotas.py  rate_limit.py  search_service.py  telemetry.py  user_service.py
src/api/middleware/: __init__.py  tracing.py
src/api/models/: __init__.py  chat.py  search.py
src/api/rag/: __init__.py  exceptions.py  generator.py  query_rewriter.py  retriever.py  settings.py
src/api/routers/: search.py
src/api/routes/: __init__.py  chat.py  me.py
src/ingestion/: __init__.py  crawler.py  function_app.py  github_fetcher.py  models.py  pipeline.py  search_client.py  snapshot.py
src/shared/: __init__.py  auth.py  clients.py  models.py  prompts.py
tests/: __init__.py  conftest.py  test_auth.py  test_chat.py  test_crawler.py  test_crawler_contract.py  test_github_fetcher.py  test_health.py  test_main.py  test_me.py  test_pipeline.py  test_quotas.py  test_search.py  test_shared_placeholders.py  test_snapshot.py  test_telemetry.py
tests/fixtures/: accelerators_ms_bundle_sample.js
