[project]
name = "ms-accelerators-bot"
version = "0.1.0"
description = "Microsoft Accelerators Finder backend and frontend monorepo"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
  { name = "Isabel Cabezas", email = "isacabe@microsoft.com" },
]
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "azure-search-documents>=11.6.0",
  "openai>=1.55.0",
  "azure-identity>=1.19.0",
  "pydantic>=2.10.0",
  "pydantic-settings>=2.6.0",
  "azure-cosmos>=4.9.0",
  "azure-functions>=1.21.0",
  "azure-storage-blob>=12.24.0",
  "applicationinsights>=0.11.10",
  "httpx>=0.27.0",
  "beautifulsoup4>=4.12.0",
  "markdownify>=0.13.0",
  "azure-keyvault-secrets>=4.11.0",
]

[dependency-groups]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "ruff>=0.8.0",
  "mypy>=1.13.0",
]

[project.urls]
Homepage = "https://github.com/isabelcabezasm/ms-accelerators-bot"
Repository = "https://github.com/isabelcabezasm/ms-accelerators-bot"
Issues = "https://github.com/isabelcabezasm/ms-accelerators-bot/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
default-groups = ["dev"]

[tool.ruff]
line-length = 79
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.12"
files = ["src", "tests"]
ignore_missing_imports = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = true
no_implicit_optional = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
markers = [
  "contract: live contract tests against accelerators.ms",
]
